--- a/css/media_style.css
+++ b/css/media_style.css
@@ -295,6 +295,10 @@
         height: 90vh;
     }
 
+    .navigation.active {
+        height: 90vh;
+    }
+
     .main_media {
         width: 0px;
         height: 0px;
@@ -509,6 +513,10 @@
         background-image: url(../src/Background/BackgroundPhone.png);
         background-position-x: none;
         background-size: 100% 100%;
+        height: 100vh;
+    }
+
+    .navigation.active {
         height: 100vh;
     }
 
