--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ header {
     display: flex;
 }
 
+header.active {
+    opacity: 25%;
+    pointer-events: none;
+}
+
 .main_div {
     display: flex;
     width: 100%;
