--- a/css/media_style.css
+++ b/css/media_style.css
@@ -10,23 +10,14 @@
         height: 600px;
     }
 
-    .navigation.active {
-        height: 600px;
-    }
-
     .main_info {
-        margin-left: 8%;
+        margin-left: 15%;
         width: 300px;
     }
 
     .main_media::after {
         top: 12px;
         left: 145px;
-    }
-
-    .main_info {
-        margin-left: 13%;
-        width: 300px;
     }
 
     .main_h4 {
@@ -81,10 +72,6 @@
     /*---------Стили для Хэдера-------------*/
 
     header {
-        height: 700px;
-    }
-
-    .navigation.active {
         height: 700px;
     }
 
@@ -173,10 +160,6 @@
     /*---------Стили для Хэдера-------------*/
 
     header {
-        height: 600px;
-    }
-
-    .navigation.active {
         height: 600px;
     }
 
@@ -299,17 +282,13 @@
         height: 90vh;
     }
 
-    .navigation.active {
-        height: 90vh;
-    }
-
     .main_media {
         width: 0px;
         height: 0px;
     }
 
     .main_info {
-        margin: 20vh auto;
+        margin: 20vh 20%;
         width: 300px;
     }
 
@@ -534,17 +513,18 @@
     .main_media { 
         width: 0px;
         height: 0px;
+        margin-left: -100%;
     }
 
     .main_media::after {
-        left: 48%;
+        left: 100%;
     }
     
     /*---------Стили для блока info--------------*/
 
     .main_info {
-        margin: 0 auto;
-        width: 100%;
+        margin-left: 10px;
+        width: 90%;
     }
 
     /*-------------------Стили для article--------------*/
@@ -708,6 +688,12 @@
     .end_img {
         width: 0px;
         height: 0px;
+    }
+
+    .contacts_button_content {
+        padding-left: 15px;
+        padding-right: 15px;
+        font-size: x-large;
     }
 }
 
