--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ header.active {
 .main_div {
     display: flex;
     width: 100%;
-    justify-content: space-between;
 }
 
 
@@ -40,36 +39,47 @@ header.active {
 
 .navigation {
     position: fixed;
-    background-color: #FFA501;
-    width: 300px;
-    height: 80vh;
+    width: 100%;
+    height: 100vh;
     z-index: 1;
     opacity: 0;
     visibility: hidden;
     transition: 0.3s;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    left: -100%;
+    transition: left 0.5s;
 }
 
 .navigation.active {
     position: fixed;
-    background-color: #FFA501;
-    width: 300px;
-    height: 80vh;
+    width: 100%;
+    height: 100vh;
     z-index: 5;
     opacity: 1;
     visibility: visible;
     transition: 0.3s;
+    left: 0;
+    transition: left 0.5s;
+}
+
+.navigation_content {
+    background-color: #FFA501;
+    width: 300px;
+    height: 100vh;
 }
 
 .nav-menu {
     margin-left: 60px;
-    padding-top: 80px;
+    padding-top: 100px;
     display: flex;
     flex-direction: column;
 }
 
 .nav-menu a {
     color: #fff;
-    margin-bottom: 12px;
+    margin-bottom: 15px;
     font-weight: 700;
     font-size: 20px;
     text-decoration: none;
@@ -79,13 +89,14 @@ header.active {
 .nav-menu a:hover {
     color: #000000;
     text-decoration: underline;
+    transition: 0.3s;
 }
 
 .nav-menu a::before {
     content: "";
     position: absolute;
     top: 6px;
-    left: -25px;
+    left: -27px;
     width: 15px;
     height: 15px;
     border: 1px solid #000000;
@@ -96,18 +107,19 @@ header.active {
     content: "";
     position: absolute;
     top: 6px;
-    left: -25px;
+    left: -27px;
     width: 15px;
     height: 15px;
     background-color: #000000;
     border-radius: 100%;
+    transition: 0.3s;
 }
 
 /*---------Изображения в блоке Навигация----------*/
 
 .nav-media {
     transform: rotate(90deg); 
-    margin-top: 34vh;
+    margin-top: 54vh;
 }
 
 .nav-media img {
@@ -119,7 +131,9 @@ header.active {
 /*---------Черный крестик справа-------------*/
 
 .cross {
-    margin: 20px 0 0 auto; 
+    margin: 0 0 0 auto;
+    position: relative;
+    top: 20px; 
     margin-right: 20px; 
     width: 28px;
     height: 28px;
@@ -148,12 +162,14 @@ header.active {
     transform: rotate(-45deg);
 }
 
+
 /*-------------Стили для header (Три черные линии)------------------*/
 
 .lines {
+    position: fixed;
     margin: 0 0 0 auto; 
-    margin-top: 30px;
-    margin-right: 20px; 
+    top: 30px;
+    right: 30px; 
     height: 23.5px;
     width: 36px;
     cursor: pointer;
@@ -187,7 +203,6 @@ header.active {
     background-color: #000000;
 }
 
-
 /*---------Стили бля блока media--------------*/
 
 .main_media { 
@@ -215,7 +230,7 @@ header.active {
 
 .main_media::after {
     content: "";
-    position:absolute;
+    position: absolute;
     top: 12px;
     left: 155px;
     width: 70px;
@@ -288,8 +303,14 @@ header.active {
     flex-direction: column;
     margin-left: 15%;
     margin-right: 15%;
+    opacity: 1;
+    transition: 0.3s;
 }
   
+.all-info.active {
+    opacity: 25%;
+}
+
 .all-info li {
     list-style-type: none;
 }
@@ -1360,4 +1381,87 @@ transform: translateY(-50%) scale(0.75);
 
 .contacts_button_send:hover {
     background-color: #ff7801;
+}
+
+
+/*---------Модальное окно при нажатии на кнопку Отправить сообщение-----------*/
+
+.contacts_button_active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #000000;
+    color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+}
+
+.contacts_button_active.active {
+    opacity: 90%;
+    transition: 0.3s;
+    visibility: visible;
+}
+
+.contacts_button_content {
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: xx-large;
+}
+
+.lines.active {
+    opacity: 0;
+}
+
+/*-----------Белый крестик справа------------*/
+
+.contacts_button_cross {
+    margin: 0 0 0 auto;
+    position: fixed;
+    top: 30px;
+    right: 10px; 
+    margin-right: 20px; 
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+}
+
+.contacts_cross_white-line-first {
+    content: "";
+    position: relative;
+    top: 12px;
+    left: -2px;
+    width: 30px;
+    height: 3.5px;
+    background-color: #fff;
+    transform: rotate(90deg);
+    transition: 0.3s;
+}
+
+.contacts_cross_white-line-second {
+    content: "";
+    position: relative;
+    top: 8.5px;
+    left: -2px;
+    width: 30px;
+    height: 3.5px;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+.contacts_cross_white-line-first.active {
+    transform: rotate(45deg);
+    transition: 0.3s;
+}
+
+.contacts_cross_white-line-second.active {
+    transform: rotate(-45deg);
+    transition: 0.3s;
 }
