--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header.active {
     flex-direction: row;
     justify-content: space-between;
     left: -100%;
-    transition: left 0.5s;
+    transition: 0.8s;
 }
 
 .navigation.active {
@@ -61,7 +61,7 @@ header.active {
     visibility: visible;
     transition: 0.3s;
     left: 0;
-    transition: left 0.5s;
+    transition: 0.8s;
 }
 
 .navigation_content {
@@ -173,6 +173,13 @@ header.active {
     height: 23.5px;
     width: 36px;
     cursor: pointer;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.lines.first-active {
+    opacity: 25%;
+    transition: 0.5s;
 }
 
 .black-line {
@@ -1059,6 +1066,12 @@ header.active {
     width: 70%;
 }
 
+.end_img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
 /*-------------Заголовок блока Контакты----------------*/
 
 .contacts_menu {
@@ -1361,7 +1374,7 @@ transform: translateY(-50%) scale(0.75);
 }
 
 .contacts_button a{
-    color:inherit;
+    color: inherit;
     text-decoration: none;
     padding: 13px 26px;  
 }
@@ -1383,6 +1396,145 @@ transform: translateY(-50%) scale(0.75);
     background-color: #ff7801;
 }
 
+
+/*--------------Модальное окно, когда пользователь не доходит до конца страницы-----------------*/
+
+.write-me {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    transition: 0.8s;
+    display: flex;
+    align-items: center;
+    visibility: hidden;
+}
+
+.write-me.active {
+    transition: 0.8s;
+    opacity: 1;
+    visibility: visible;
+}
+
+.write-me_content {
+    width: 1000px;
+    height: 220px;
+    min-width: 200px; 
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    color:#fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    justify-items: center;
+}
+
+.write-me_message {
+    margin: 0 auto;
+    margin-top: -50px;
+    font-size: larger;
+}
+
+.write-me_button {
+    width: 200px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -40px;
+    background-color: #FFA501;
+    box-shadow: 0 4px 5px 1px #2c2b2b23;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: #000000;
+}
+
+.write-me_button:hover {
+    background-color: #ff7801;
+    color: #fff;
+}
+
+/*-------------Крестик на модальном окне справа----------------*/
+
+.write-me_lines {
+    display: block;
+    margin-left: auto;
+    margin-right: 15px;
+    margin-top: -20px;
+    width: 28px;
+    height: 28px;
+    cursor: pointer;
+}
+
+.write-me_lines_first-line {
+    content: "";
+    position: relative;
+    top: 12px;
+    left: -2px;
+    width: 30px;
+    height: 3.5px;
+    background-color: #fff;
+    transform: rotate(90deg);
+    transition: 0.3s;
+}
+
+.write-me_lines_second-line {
+    content: "";
+    position: relative;
+    top: 8.5px;
+    left: -2px;
+    width: 30px;
+    height: 3.5px;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+.write-me_lines_first-line.active {
+    transform: rotate(45deg);
+    transition: 0.3s;
+}
+
+.write-me_lines_second-line.active {
+    transform: rotate(-45deg);
+    transition: 0.3s;
+}
+
+/*---------Модальное окно для отправки сообщения-----------------*/
+
+.send-me {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity: 0;
+    width: 100%;
+    height: 100vh;
+    visibility: hidden;
+    display: flex;
+    align-items: center;
+    transform: translateY(100%);
+    transition: all 0.3s;
+}
+
+.send-me.active {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.8);
+    visibility: visible;
+    transform: translateY(0);
+    transition: all 0.3s;
+}
+
+.send-me_content {
+    margin: 0 auto;
+    width: 800px;
+    height: auto;
+    background-color: #fff;
+    padding: 50px;
+}
 
 /*---------Модальное окно при нажатии на кнопку Отправить сообщение-----------*/
 
